[gd_scene load_steps=9 format=2]

[ext_resource path="res://Data/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/MachiningGUITabs.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/MachiningGUI.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0, 0, 0, 0.854902 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.172549, 0.172549, 0.172549, 0.784314 )
border_width_left = 8
border_width_right = 8
border_color = Color( 0.172549, 0.172549, 0.172549, 0.784314 )
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.870588 )
border_width_left = 8
border_width_right = 8
border_color = Color( 0, 0, 0, 0.870588 )
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="Theme" id=4]
TabContainer/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = null
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 6 )
TabContainer/styles/tab_bg = SubResource( 2 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[node name="MachiningGUITabs" type="TabContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -323.0
margin_right = 500.0
margin_bottom = 323.0
size_flags_vertical = 3
theme = SubResource( 4 )
custom_fonts/font = SubResource( 1 )
tab_align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gathering" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 46.0
margin_right = 0.0
margin_bottom = 0.0
_machine_category = "Gatherer"

[node name="Refining" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 46.0
margin_right = 0.0
margin_bottom = 0.0
_machine_category = "Refining"

[node name="Moving" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 46.0
margin_right = 0.0
margin_bottom = 0.0
_machine_category = "Moving"

[node name="Powering" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 46.0
margin_right = 0.0
margin_bottom = 0.0
_machine_category = "Powering"

[connection signal="machine_craft_requested" from="Gathering" to="." method="_on_Gathering_machine_craft_requested"]
[connection signal="machine_craft_requested" from="Refining" to="." method="_on_Refining_machine_craft_requested"]
[connection signal="machine_craft_requested" from="Moving" to="." method="_on_Moving_machine_craft_requested"]
[connection signal="machine_craft_requested" from="Powering" to="." method="_on_Powering_machine_craft_requested"]
